--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <header>
-            <h1>titulo do site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2> Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2> Curso de html 5</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere molestias exercitationem corrupti. Quae impedit laudantium temporibus voluptates velit quibusdam enim libero accusantium odit commodi, cum consequatur sapiente soluta architecto quos.</p>
         </article>
-        <article>Artigo 002</article>
-        <p>Texto do artigo 002</p>
+        <article>Curso de Javascript</article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam dolorum voluptatibus est quae tempore perspiciatis ipsum assumenda, blanditiis dolores voluptas! Et dignissimos ducimus doloremque corporis amet alias sapiente nisi obcaecati.</p>
     </main>
     
 </body>
